2016-10-03 Deimantas Galcius <deimantas.galcius@gmail.com>

	* Makefile (PATH): set PATH to look into $extra_bin and $ht_bin;
	TeXLive 2016 (DVD) does not ship with 'xhlatex', so we find it in $ht_bin.
	* Makefile (tex_options): set '-recorder' option to $tex_opts. We want to know
	deps/derived files
	* Makefile (clean): add '*.fls' for removal
	* Makefile (ht tex): replace with $(HTTEX) which respects $tex_opts
	* Makefile ("-d./" in htlatex calls): replace "-d./" with "".
	"-d./" means move generated files to current folder, which does not make sense.
	* Makefile (html4): Amend $(tex4ht_html4_derived) rule. No dependency on
	html4.4ht-released
	* Remove (html4.4-released): Delete file. (hopefully) not needed any more.
	* Makefile: change $(dev_null) to "".

2016-09-29 Deimantas Galcius <deimantas.galcius@gmail.com>

	* common-info.tex (CleanComment): fix CleanComment to not
	raise latex run error on first pass.
	* mktex4ht-cnf.tex (new file): copy of mktex4ht.cnf. The file
	should not be generated by literate sources
	* tex4ht-4ht.tex (mktex4ht.4ht,mktex4ht.cnf): remove mktex4ht.4ht
	generation. Remove mktex4ht.cnf processing. Define macro \Skipmkfilename.
	* tex4ht-cond4ht.cnf (ConfigFiles,FirstPass): \ConfigFiles set to a new file
	mktex4ht-cnf.tex; skip processing lit entries on FirstPass; set a hook
	\Skipmkfilename for skipping mktex4ht.4ht generation from tex4ht-4ht.tex
	* tex4ht-info-html4.tex: remove code duplication; input common-info.tex and
	common.tex; this also fixes latex run error as in common-info.tex
	* tex4ht-info-javahelp.tex: remove code duplication; ensure to load
	local mktex4ht.4ht
	* tex4ht-info-mml.tex: ensure to load local mktex4ht.4ht
	* tex4ht-info.tex: remove code duplication

2016-09-20  Karl Berry  <karl@freefriends.org>

	* tex4ht-c.tex (scan postamble): allow any value <= the xdv byte,
	instead of requiring equality.  That way the same tex4ht binary
	can be used with different versions of XeTeX.  As of